[package]
name = "aws-login"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"

description = "A command line utility to simplify logging into AWS accounts and services."
license = "ISC"
authors = ["Kevin Herrera <kevin@herrera.io>"]
homepage = "https://github.com/kherge/rs.aws-login"
repository = "https://github.com/kherge/rs.aws-login/"
keywords = ["aws", "login"]
categories = ["command-line-utilities"]

[dependencies]
console = "^0.15"
dialoguer = "^0.9"
home = "^0.5"
lazy_static = "^1.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
structopt = "^0.3"
thiserror = "^1.0"

[profile.release]
lto = true
