[package]
name = "aws-login"
version = "1.0.1"
edition = "2021"
rust-version = "1.57"

description = "A command line utility to simplify logging into AWS accounts and services."
license = "ISC"
authors = ["Kevin Herrera <kevin@herrera.io>"]
homepage = "https://github.com/kherge/rs.aws-login"
repository = "https://github.com/kherge/rs.aws-login/"
keywords = ["aws", "login"]
categories = ["command-line-utilities"]

[dependencies]
clap = "^3.0"
crossterm = "^0.22"
home = "^0.5"
lazy_static = "^1.4"
requestty = { version = "^0.2", features = ["crossterm"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "^1.15", features = ["full"] }
which = "^4.2"

[profile.release]
lto = true
